Cambios en index.html
Se cambio h1 y nombre del script js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Listeners</title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <style>
         #frm-integrantes input, label{
             display: block;
@@ -16,7 +17,7 @@
     
     <div class="container">
 
-        <h1>Tarea</h1>
+        <h1>Calcular Edades y Salarios</h1>
 
         <form id="frm-hogar">
             <label for="cantidad-integrantes">Cantidad de integrantes del grupo familiar</label>
@@ -37,6 +38,6 @@
 
     
 
-    <script src="event-listeners.js"></script>
+    <script src="edades-salarios.js"></script>
 </body>
 </html>
